notes/rust_multi_file_error.txt
error[E0603]: function `foo` is private
 --> rust_multi_file_error.rs:4:15
  |
4 |     rust_lib::foo(1.0, 2);
  |               ^^^ private function
  |
note: the function `foo` is defined here
 --> rust_lib.rs:2:1
  |
2 | fn foo(a: i32, b: i32) -> i32 {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
 --> rust_multi_file_error.rs:4:19
  |
4 |     rust_lib::foo(1.0, 2);
  |     ------------- ^^^ expected `i32`, found floating-point number
  |     |
  |     arguments to this function are incorrect
  |
note: function defined here
 --> rust_lib.rs:2:4
  |
2 | fn foo(a: i32, b: i32) -> i32 {
  |    ^^^ ------

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0603.
For more information about an error, try `rustc --explain E0308`.
